# ray_tracer_2

./: Cargo.toml  README.md
.zed/: tasks.json
assets/: dice.mtl
assets/f1/: f1.mtl
shaders/: custom.wgsl  ray_tracer.wgsl  renderer copy.wgsl  renderer.wgsl
src/: app.rs  egui.rs  main.rs
src/core/: app.rs  asset.rs  bvh.rs  camera.rs  egui.rs  egui_custom.rs  engine.rs  mesh.rs  mod.rs  ray_tracer.rs  renderer.rs  scene.rs  texture.rs
src/rendering/: egui.rs  mod.rs  ray_tracer.rs  renderer.rs
src/scene/: camera.rs  entity.rs  mod.rs  scene.rs
src/scene/components/: material.rs  mod.rs  texture.rs  transform.rs
src/scene/components/geometry/: mesh.rs  mod.rs  sphere.rs  vertex.rs
