[package]
name = "ray_tracer_2"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.32.1"
egui-wgpu = { version = "0.32.1", features= ["winit"]}
egui-winit = "0.32.1"
winit = "0.30.12"
pollster = "0.4.0"

log = "0.4.27"
env_logger = "0.11.8"
anyhow = "1.0.100"

bytemuck = { version = "1.23.2", features = ["derive"]}

tobj = "4.0.3"

glam = "0.30.0"
rand = "0.9.2"
